lesson 11
- get method that returns all projects only for admin role
- every delete method required admin role
- 403 for AccessDeniedException
