# src/main/resources/api/api.yml
@@ -86,11 +86,6 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       responses:
         '200':
           description: OK
@@ -109,11 +104,6 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       requestBody:
         content:
           application/json:
@@ -138,11 +128,6 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       responses:
         '200':
           description: OK
@@ -157,11 +142,6 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       requestBody:
         content:
           application/json:
@@ -181,12 +161,6 @@ paths:
       tags:
         - Project
       operationId: getProjects
-      parameters:
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       responses:
         '200':
           description: OK
@@ -200,12 +174,6 @@ paths:
       tags:
         - Project
       operationId: createProject
-      parameters:
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       requestBody:
         content:
           application/json:
@@ -231,11 +199,6 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       responses:
         '200':
           description: OK
@@ -254,11 +217,6 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       requestBody:
         content:
           application/json:
@@ -283,11 +241,6 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       responses:
         '200':
           description: OK
@@ -302,11 +255,6 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       requestBody:
         content:
           application/json:
@@ -326,11 +274,6 @@ paths:
         - Issue
       operationId: getIssues
       parameters:
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
         - name: projectId
           in: query
           schema:
@@ -349,12 +292,6 @@ paths:
       tags:
         - Issue
       operationId: createIssue
-      parameters:
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       requestBody:
         content:
           application/json:
@@ -380,11 +317,6 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       responses:
         '200':
           description: OK
@@ -403,11 +335,6 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       responses:
         '200':
           description: OK
@@ -417,11 +344,6 @@ paths:
         - Comment
       operationId: getComments
       parameters:
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
         - name: issueId
           in: query
           schema:
@@ -440,12 +362,6 @@ paths:
       tags:
         - Comment
       operationId: createComment
-      parameters:
-        - name: X-User-Name
-          in: header
-          required: true
-          schema:
-            type: string
       requestBody:
         content:
           application/json:
